# least_squares

./: .clang-format  .clang-tidy  .gitignore  CMakePresets.json  CMakelists.txt  vcpkg.json
lms/: CMakeLists.txt  bezier.h  bezier_model.h  least_sq.cpp  least_sq.h  least_sq_test.cpp  main.cpp
